cmake_minimum_required(VERSION 3.8.0)
project(Dlink CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(INCLUDE_DIR "./include")
set(SOURCE_DIR "./src")
set(OUTPUT_DIR "./bin")

set(MULTITHREADING ON CACHE BOOL "")
set(BOOST_DIRECTORY "" CACHE STRING "")

include_directories(${INCLUDE_DIR})
file(GLOB SOURCE_LIST ${SOURCE_DIR}/*.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

add_definitions(-D__STDC_CONSTANT_MACROS)
add_definitions(-D__STDC_LIMIT_MACROS)

set(BOOST_ROOT ${BOOST_DIRECTORY})
find_package(Boost REQUIRED COMPONENTS program_options)
include_directories(${Boost_INCLUDE_DIRS})

if(MULTITHREADING)
	add_definitions(-DDLINK_MULTITHREADING)
endif(MULTITHREADING)

add_library(${PROJECT_NAME} STATIC ${SOURCE_LIST})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})

install(TARGETS ${PROJECT_NAME} DESTINATION bin)